Final updates on i18n Add routes Language selection

--- a/app/views/home/index.xml.erb
+++ b/app/views/home/index.xml.erb
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:geo="http://www.google.com/geo/schemas/sitemap/1.0" xmlns:image="http://www.google.com/schemas/sitemap-image/1.1" xmlns:mobile="http://www.google.com/schemas/sitemap-mobile/1.0" xmlns:news="http://www.google.com/schemas/sitemap-news/0.9" xmlns:video="http://www.google.com/schemas/sitemap-video/1.1" xmlns:xhtml="http://www.w3.org/1999/xhtml" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9 http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd">
 	<url>
-		<loc><%= root_url %></loc>
+		<loc><%= home_url(:en) %></loc>
+		<changefreq>daily</changefreq>
+	</url>
+	<url>
+		<loc><%= home_url(:br) %></loc>
 		<changefreq>daily</changefreq>
 	</url>
 </urlset>
