--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
-<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]--><head>
+<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="<%=I18n.locale%>"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="<%=I18n.locale%>"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="<%=I18n.locale%>"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="<%=I18n.locale%>"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="<%=I18n.locale%>"><!--<![endif]--><head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Gustavo Cunha - Software Engineer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
+	<meta name="description" content="<%=ActionView::Base.full_sanitizer.sanitize(t(:text, scope: [:about]))%>" />
 	<!-- Open Graph Tags -->
 	<meta property="og:title" content="Gustavo Cunha - Software Engineer" />
 	<meta property="og:site_name" content="Gustavo Cunha"/>
 	<meta property="og:image" content="<%=asset_url('website/avatar.jpg')%>"/>
-	<meta property="og:url" content="<%=root_url%>" />
-	<meta property="og:description" content="Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012." />
+	<meta property="og:url" content="<%=home_url(I18n.locale)%>" />
+	<meta property="og:description" content="<%=ActionView::Base.full_sanitizer.sanitize(t(:text, scope: [:about]))%>" />
 	<meta property="og:type" content="website" />
-	<meta property="og:locale" content="pt_BR" />
+	<meta property="og:locale" content="<%=I18n.locale%>" />
 	<!--google font style-->
 	<!--font-family: 'Open Sans', sans-serif;-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
@@ -34,6 +34,10 @@
 	<!--wrapper start-->
 	<div class="wrapper" id="wrapper" itemscope itemtype="http://schema.org/Person">
 		<header>
+			<ul class="i18n">
+				<li><%=link_to "BR", home_path(:br), class: "flag br" %></li>
+				<li><%=link_to "EN", home_path(:en), class: "flag gb" %></li>
+			</ul>
 			<!--banner start-->
 			<div class="banner row" id="banner">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
