--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,7 +84,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<!-- <div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item5])%><br><%=t(:end_date, scope: [:experience, :items, :item5])%></div>
 				</div>
@@ -96,7 +96,7 @@
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item5])%></p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item4])%><br><%=t(:end_date, scope: [:experience, :items, :item4])%></div>
