Remove missing zoom image from CSS

--- a/app/assets/stylesheets/lightbox.css.scss
+++ b/app/assets/stylesheets/lightbox.css.scss
@@ -51,18 +51,18 @@
 	top:20px;
 	z-index:110;
 }
-.ui-lightbox-panorama-icon-expand {
-	background:url(/assets/website/zoom.png) top left no-repeat;
-}
-.ui-lightbox-panorama-icon-expand-hover {
-	background:url(/assets/website/zoom.png) top left no-repeat;
-}
-.ui-lightbox-panorama-icon-shrink {
-	background:url(/assets/website/zoom-hover.png) top right no-repeat;
-}
-.ui-lightbox-panorama-icon-shrink-hover {
-	background:url(/assets/website/zoom-hover.png) top right no-repeat;
-}
+// .ui-lightbox-panorama-icon-expand {
+// 	background:url(/assets/website/zoom.png) top left no-repeat;
+// }
+// .ui-lightbox-panorama-icon-expand-hover {
+// 	background:url(/assets/website/zoom.png) top left no-repeat;
+// }
+// .ui-lightbox-panorama-icon-shrink {
+// 	background:url(/assets/website/zoom-hover.png) top right no-repeat;
+// }
+// .ui-lightbox-panorama-icon-shrink-hover {
+// 	background:url(/assets/website/zoom-hover.png) top right no-repeat;
+// }
 .ui-lightbox-loader {
 	background:url(/assets/website/ajax-loader.gif) center center no-repeat;
 }
