--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,6 +73,19 @@
 			</div>
 			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item7])%><br><%=t(:end_date, scope: [:experience, :items, :item7])%></div>
+				</div>
+				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+					<div class="arrowpart"></div>
+					<div class="exCon">
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item7])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item7])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item7])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item7])%></span></span></h4>
+						<h5><%=t(:position, scope: [:experience, :items, :item7])%></h5>
+						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item7])%></p>
+					</div>
+				</div>
+			</div>
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item6])%><br><%=t(:end_date, scope: [:experience, :items, :item6])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
