--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -30,7 +30,7 @@
 	padding-bottom:0px !important;
 }
 .mapArea{
-	background:url(/assets/website/map-bro.png) repeat-x 0 0;
+	background:asset_url('website/map-bro.png') repeat-x 0 0;
 	padding-top:4px;
 	height:400px;
 	overflow:hidden;
@@ -41,7 +41,7 @@
 	width:100%;
 	height:396px;
 	padding-bottom: 4px;
-	background:url(/assets/website/map-bro.png) repeat-x 0 100%;
+	background:asset_url('website/map-bro.png') repeat-x 0 100%;
 }
 
 
