--- a/app/assets/stylesheets/educational.css.scss
+++ b/app/assets/stylesheets/educational.css.scss
@@ -27,7 +27,7 @@
 
 
 .education .arrowpart{
-	background:url(/assets/website/arrow-left-light.png) no-repeat 0 23px;
+	background:asset_url('website/arrow-left-light.png') no-repeat 0 23px;
 }
 .education .exCon{
 	background:#fafafa;
