--- a/app/assets/stylesheets/font-awesome.css.scss
+++ b/app/assets/stylesheets/font-awesome.css.scss
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('fonts/fontawesome-webfont.eot?v=4.0.3');
-  src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), url('fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), url('fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  src: asset_url('fonts/fontawesome-webfont.eot?v=4.0.3');
+  src: asset_url('fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), asset_url('fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), asset_url('fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), asset_url('fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
