--- a/app/assets/stylesheets/technical.css.scss
+++ b/app/assets/stylesheets/technical.css.scss
@@ -56,7 +56,7 @@
 
 
 .skilBg{
-	background:url(/assets/website/skills.png) no-repeat 0 0;
+	background:asset_url('website/skills.png') no-repeat 0 0;
 }
 
 
