--- a/app/assets/stylesheets/i18n.css.scss
+++ b/app/assets/stylesheets/i18n.css.scss
@@ -13,7 +13,7 @@
 		.flag {
 			width: 32px;
 			height: 32px;
-			background:url(website/flags.png) no-repeat;
+			background:asset_url('website/flags.png') no-repeat;
 			text-indent: -10000px;
 			display: inline-block;
 			outline: none;
