--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,92 +71,92 @@
 				<h2><%=t(:title, scope: [:experience])%></h2>
 				<p><%=t(:subtitle, scope: [:experience])%></p>
 			</div>
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item7])%><br><%=t(:end_date, scope: [:experience, :items, :item7])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item7])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item7])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item7])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item7])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item7])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item7])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item7])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item7])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item7])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item7])%></p>
 					</div>
 				</div>
 			</div>
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item6])%><br><%=t(:end_date, scope: [:experience, :items, :item6])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item6])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item6])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item6])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item6])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item6])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item6])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item6])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item6])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item6])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item6])%></p>
 					</div>
 				</div>
 			</div>
-			<!-- <div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<!-- <div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item5])%><br><%=t(:end_date, scope: [:experience, :items, :item5])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item5])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item5])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item5])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item5])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item5])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item5])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item5])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item5])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item5])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item5])%></p>
 					</div>
 				</div>
 			</div> -->
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item4])%><br><%=t(:end_date, scope: [:experience, :items, :item4])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item4])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item4])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item4])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item4])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item4])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item4])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item4])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item4])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item4])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item4])%></p>
 					</div>
 				</div>
 			</div>
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item3])%><br><%=t(:end_date, scope: [:experience, :items, :item3])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item3])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item3])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item3])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item3])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item3])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item3])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item3])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item3])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item3])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item3])%></p>
 					</div>
 				</div>
 			</div>
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item2])%><br><%=t(:end_date, scope: [:experience, :items, :item2])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item2])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item2])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item2])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item2])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item2])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item2])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item2])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item2])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item2])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item2])%></p>
 					</div>
 				</div>
 			</div>
-			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+			<div class="row workDetails" itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:start_date, scope: [:experience, :items, :item1])%><br><%=t(:end_date, scope: [:experience, :items, :item1])%></div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
 					<div class="arrowpart"></div>
 					<div class="exCon">
-						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item1])%></span> - <span itemprop="location" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item1])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item1])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item1])%></span></span></h4>
+						<h4><span itemprop="legalName"><%=t(:name, scope: [:experience, :items, :item1])%></span> - <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality"><%=t(:city, scope: [:experience, :items, :item1])%></span> - <span itemprop="addressRegion"><%=t(:region, scope: [:experience, :items, :item1])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:experience, :items, :item1])%></span></span></h4>
 						<h5><%=t(:position, scope: [:experience, :items, :item1])%></h5>
 						<p itemprop="description"><%=t(:description, scope: [:experience, :items, :item1])%></p>
 					</div>
@@ -173,7 +173,7 @@
 				<p><%=t(:subtitle, scope: [:education])%></p>
 			</div>
 
-			<div class="row workDetails" itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
+			<div class="row workDetails" itemprop="alumniOf" itemscope itemtype="https://schema.org/CollegeOrUniversity">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:date, scope: [:education, :items, :item2])%></div>
 				</div>
@@ -186,7 +186,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row workDetails" itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
+			<div class="row workDetails" itemprop="alumniOf" itemscope itemtype="https://schema.org/CollegeOrUniversity">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
 					<div class="workYear"><%=t(:date, scope: [:education, :items, :item1])%></div>
 				</div>
@@ -416,12 +416,12 @@
 			<!--contact info start-->
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<h4><%=t(:title, scope: [:contact, :contacts])%></h4>
-				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"> <i class="fa fa-map-marker fa-lg"></i> <span itemprop="addressLocality"><%=t(:city, scope: [:contact, :contacts, :address])%></span> / <span itemprop="addressRegion"><%=t(:state, scope: [:contact, :contacts, :address])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:contact, :contacts, :address])%></span></p>
+				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"> <i class="fa fa-map-marker fa-lg"></i> <span itemprop="addressLocality"><%=t(:city, scope: [:contact, :contacts, :address])%></span> / <span itemprop="addressRegion"><%=t(:state, scope: [:contact, :contacts, :address])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:contact, :contacts, :address])%></span></p>
 				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="telephone"> <i class="fa fa-mobile fa-lg"></i> <%=t(:phone, scope: [:contact, :contacts])%></p>
 				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="email"> <i class="fa fa-envelope-o "></i> <a href="mailto:gustavocunha&#64;gmail&#46;com"><%=t(:email, scope: [:contact, :contacts]).html_safe%></a></p>
-				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-github"></i> <a href="http://github.com/gmmcal" target="_blank"><%=t(:github, scope: [:contact, :contacts])%></a></p>
-				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-linkedin"></i> <a href="http://linkedin.com/in/gmmcal" target="_blank"><%=t(:linkedin, scope: [:contact, :contacts])%></a></p>
-				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-twitter"></i> <a href="http://twitter.com/gmmcal" target="_blank"><%=t(:twitter, scope: [:contact, :contacts])%></a></p>
+				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-github"></i> <a href="https://github.com/gmmcal" target="_blank"><%=t(:github, scope: [:contact, :contacts])%></a></p>
+				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/gmmcal" target="_blank"><%=t(:linkedin, scope: [:contact, :contacts])%></a></p>
+				<p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-twitter"></i> <a href="https://twitter.com/gmmcal" target="_blank"><%=t(:twitter, scope: [:contact, :contacts])%></a></p>
 			</div>
 			<!--contact info end-->
 		</div>
