--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -19,7 +19,7 @@
 	<meta property="og:locale" content="<%=I18n.locale%>" />
 	<!--google font style-->
 	<!--font-family: 'Open Sans', sans-serif;-->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
 	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'modernizr', 'data-turbolinks-track' => true %>
 
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<!--wrapper start-->
-	<div class="wrapper" id="wrapper" itemscope itemtype="http://schema.org/Person">
+	<div class="wrapper" id="wrapper" itemscope itemtype="https://schema.org/Person">
 		<header>
 			<ul class="i18n">
 				<li><%=link_to "BR", home_path(:br), class: "flag br" %></li>
